// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-button-circle test-class"
  >
    <styled.div
      height="24px"
      width="24px"
    >
      <Styled(Button)
        bottom={null}
        className="test-class"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        iconName="bomb"
        iconStyle=""
        id={null}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        notooltip={false}
        obj="ButtonCircle"
        onClick={[Function]}
        padding={null}
        selected={false}
        sizing="normal"
        style={
          Object {
            "borderColor": "#000000",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        visible={true}
        width={null}
        xcss={null}
      />
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "iconStyle": "",
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "ButtonCircle",
  "onClick": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "borderColor": "#000000",
  },
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
